infra/democratic-csi/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: democratic-csi
  namespace: democratic-csi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: democratic-csi
  egress:
    - toEntities: [kube-apiserver]
      toPorts:
        - ports: [{ port: "6443", protocol: TCP }]
    - toEntities: [world]
      toPorts:
        - ports:
            - { port: "443", protocol: TCP }
            - { port: "22", protocol: TCP }
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snapshot-controller
  namespace: democratic-csi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: snapshot-controller
  egress:
    - toEntities: [kube-apiserver]
      toPorts:
        - ports: [{ port: "6443", protocol: TCP }]
